--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,7 @@
     <string name="content_tab_text">This is Tab %1$d</string>
 
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="menu">Menu 1</string>
+    <string name="search">Masukkan Username</string>
+    <string name="search_hint">Masukkan Nama</string>
 </resources>
