--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
     <string name="menu">Menu 1</string>
     <string name="search">Masukkan Username</string>
     <string name="search_hint">Masukkan Nama</string>
+    <string name="no_data">Data tidak ditemukan</string>
 </resources>
